# trust-store

./: CMakeLists.txt  Jenkinsfile  symbols.map
cmake/: PrePush.cmake
data/: CMakeLists.txt  trust-store.pc.in
debian/: bileto_pre_release_hook  changelog  control  control.in  copyright  gen-debian-files.sh  get-versions.sh  libtrust-store-dev.install  libtrust-store-doc.install  libtrust-store0.install  libtrust-store0.symbols  libtrust-store1.install  libtrust-store1.install.i386  libtrust-store1.install.ppc64el  libtrust-store1.install.with_mir  libtrust-store1.symbols  rules  trust-store-bin.install  trust-store-bin.install.arm64  trust-store-bin.install.with_mir  trust-store-tests.install
doc/: CMakeLists.txt  Doxyfile.in
include/core/trust/: agent.h  cached_agent.h  dbus_agent.h  expose.h  mir_agent.h  request.h  resolve.h  store.h  tagged_integer.h  visibility.h
po/: CMakeLists.txt  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  co.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  frp.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  ia.po  (+49 more)
src/: CMakeLists.txt
src/core/trust/: agent.cpp  app_id_formatting_trust_agent.cpp  app_id_formatting_trust_agent.h  cached_agent.cpp  cached_agent.h  cached_agent_glog_reporter.cpp  cached_agent_glog_reporter.h  codec.h  daemon.cpp  daemon.h  daemon_skeleton_main.cpp  daemon_stub_main.cpp  dbus_interface.h  expose.cpp  i18n.cpp  i18n.h  preseed.cpp  preseed.h  preseed_main.cpp  privilege_escalation_prevention_agent.cpp  privilege_escalation_prevention_agent.h  request.cpp  resolve.cpp  runtime.cpp  runtime.h  terminal_agent.h  white_listing_agent.cpp  white_listing_agent.h
src/core/trust/dbus/: agent.cpp  agent.h  agent_registry.h  bus_factory.cpp  bus_factory.h  codec.h  interface.h
src/core/trust/impl/sqlite3/: store.cpp  store.h
src/core/trust/mir/: agent.cpp  agent.h  click_desktop_entry_app_info_resolver.cpp  click_desktop_entry_app_info_resolver.h  click_desktop_entry_app_name_resolver.cpp  click_desktop_entry_app_name_resolver.h  config.h.in  not_supported.cpp  prompt_config.h.in  prompt_main.cpp  prompt_main.h  prompt_main.qml
src/core/trust/remote/: agent.cpp  agent.h  dbus.cpp  dbus.h  helpers.cpp  helpers.h  posix.cpp  posix.h  unix_domain_socket_agent.cpp  unix_domain_socket_agent.h
tests/: CMakeLists.txt  app_id_formatting_trust_agent_test.cpp  bug_1387734.cpp  cached_agent_test.cpp  click_desktop_entry_app_name_resolver.cpp  click_desktop_entry_app_name_resolver_test.cpp  daemon_test.cpp  dbus_test.cpp  mir_agent_test.cpp  mock_agent.h  mock_store.h  preseed_test.cpp  privilege_escalation_prevention_agent_test.cpp  process_exited_successfully.h  remote_agent_test.cpp  remote_trust_store_test.cpp  request_processor_test.cpp  test_data.h.in  test_prompt.cpp  the.h  trust_store_test.cpp  white_listing_agent_test.cpp
tests/click_db_for_testing/valid.alt.pkg/0.0.0/: app.desktop
tests/share/applications/: valid.pkg_app_0.0.0.desktop
